// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsPanel renders FeatureProfile when interpretation=undefined, orgUnitProfile=null, featureProfile=myfeature and panelOpen=true 1`] = `
<div>
  <div
    class="detailsPanel"
    data-test="details-panel"
  >
    <div>
      Feature Profile
    </div>
  </div>
</div>
`;

exports[`DetailsPanel renders Interpretations when interpretation=myinterpretation, orgUnitProfile=myorgunit, featureProfile=myfeature and panelOpen=false 1`] = `
<div>
  <div
    class="detailsPanel collapsed"
    data-test="details-panel"
  >
    <div>
      Interpretations
    </div>
  </div>
</div>
`;

exports[`DetailsPanel renders Interpretations when interpretation=myinterpretation, orgUnitProfile=myorgunit, featureProfile=myfeature and panelOpen=true 1`] = `
<div>
  <div
    class="detailsPanel"
    data-test="details-panel"
  >
    <div>
      Interpretations
    </div>
  </div>
</div>
`;

exports[`DetailsPanel renders Interpretations when interpretation=myinterpretation, orgUnitProfile=null, featureProfile=null and panelOpen=false 1`] = `
<div>
  <div
    class="detailsPanel collapsed"
    data-test="details-panel"
  >
    <div>
      Interpretations
    </div>
  </div>
</div>
`;

exports[`DetailsPanel renders Interpretations when interpretation=myinterpretation, orgUnitProfile=null, featureProfile=null and panelOpen=true 1`] = `
<div>
  <div
    class="detailsPanel"
    data-test="details-panel"
  >
    <div>
      Interpretations
    </div>
  </div>
</div>
`;

exports[`DetailsPanel renders Interpretations when interpretation=undefined, orgUnitProfile=null, featureProfile=null and panelOpen=true 1`] = `
<div>
  <div
    class="detailsPanel"
    data-test="details-panel"
  >
    <div>
      Interpretations
    </div>
  </div>
</div>
`;

exports[`DetailsPanel renders OrgUnitProfile when interpretation=undefined, orgUnitProfile=myorgunit, featureProfile=myfeature and panelOpen=true 1`] = `
<div>
  <div
    class="detailsPanel"
    data-test="details-panel"
  >
    <div>
      Org Unit Profile
    </div>
  </div>
</div>
`;

exports[`DetailsPanel renders null when interpretation=undefined, orgUnitProfile=myorgunit, featureProfile=null and panelOpen=false 1`] = `
<div>
  <div
    class="detailsPanel collapsed"
    data-test="details-panel"
  />
</div>
`;

exports[`DetailsPanel renders null when interpretation=undefined, orgUnitProfile=null, featureProfile=null and panelOpen=false 1`] = `
<div>
  <div
    class="detailsPanel collapsed"
    data-test="details-panel"
  />
</div>
`;
